# Conduit_Alpha_v2

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  STATUS.md
.claude/rules/: calibration.md  looper.md  midirig.md  patch-engine.md  touchlive.md  ui-design.md
.github/workflows/: ci.yml
Assets/ControllerProfiles/: AllenHeath_XoneK1.csv  Frontier_AlphaTrack.csv
Assets/Icons/: README.md
ConduitTouchLab/: CMakeLists.txt  README.md
ConduitTouchLab/Source/: BlindAbMode.cpp  BlindAbMode.h  FramePacer.h  Main.cpp  MetricsPanel.cpp  MetricsPanel.h  NativeTouchSource.cpp  NativeTouchSource.h  RawPointerSource.cpp  RawPointerSource.h  TouchFilterChain.h  TouchProbeComponent.cpp  TouchProbeComponent.h  TouchSample.h  TraceView.cpp  TraceView.h  WindowsTouchSuppression.h
Source/Core/: AudioDeviceController.cpp  AudioDeviceController.h  CallbackTimingMonitor.h  CanvasGestureRecognizer.cpp  CanvasGestureRecognizer.h  CcControlModel.cpp  CcControlModel.h  ChannelNames.cpp  ChannelNames.h  ChannelStripLayers.cpp  ChannelStripLayers.h  ChordMemory.cpp  ChordMemory.h  ConduitMacroTargets.cpp  ConduitMacroTargets.h  ControllerProfile.cpp  ControllerProfile.h  CurveEditInteraction.cpp  CurveEditInteraction.h  EngineEditor.cpp  EngineEditor.h  EngineProcessor.cpp  EngineProcessor.h  ExpressionAxis.cpp  ExpressionAxis.h  GraphFader.cpp  GraphFader.h  GraphManager.cpp  GraphManager.h  GridPanelSettings.cpp  GridPanelSettings.h  GridSessionStore.cpp  GridSessionStore.h  GridVoiceEngine.cpp  GridVoiceEngine.h  InputLinkSend.cpp  InputLinkSend.h  LinkClock.cpp  LinkClock.h  LinkReceiveStream.cpp  (+56 more)
Source/DSP/Airwindows/: AirwindowsPlugin.cpp  AirwindowsPlugin.h  AirwindowsRegistry.cpp  AirwindowsRegistry.h  CMakeLists.txt  PORTING_NOTES.md
Source/DSP/Airwindows/Plugins/: Density.cpp  Density.h  Slew.cpp  Slew.h  Spiral.cpp  Spiral.h
Source/Interfaces/: ICaptureTapClient.h  IClockSlave.h  IClockSource.h  IExternalAudioEndpoint.h  ILooperAudioClient.h  IMidiOutputTarget.h  ISendConfigClient.h  IStochastic.h  IVoiceSink.h
Source/Modules/: AirwindowsProcessorModule.cpp  AirwindowsProcessorModule.h  AnalysisModule.h  AttenuatorModule.cpp  AttenuatorModule.h  AudioEndpointModule.cpp  AudioEndpointModule.h  CaptureTapModule.cpp  CaptureTapModule.h  ChassisSchema.cpp  ChassisSchema.h  ConduitModule.cpp  ConduitModule.h  GeneratorModule.h  LfoModule.cpp  LfoModule.h  LinkAudioReceiveModule.cpp  LinkAudioReceiveModule.h  LinkAudioSendModule.cpp  LinkAudioSendModule.h  LooperBigOutModule.cpp  LooperBigOutModule.h  LooperInModule.cpp  LooperInModule.h  LooperOutModule.cpp  LooperOutModule.h  LooperPatchInModule.cpp  LooperPatchInModule.h  LooperPatchOutModule.cpp  LooperPatchOutModule.h  ModuleFactory.cpp  ModuleFactory.h  ProcessorModule.cpp  ProcessorModule.h  ScopeModule.cpp  ScopeModule.h  StepSequencerModule.cpp  StepSequencerModule.h  UtilityModule.h
Source/TouchLive/: AbletonParamTarget.cpp  AbletonParamTarget.h  AlphaTrackLcd.cpp  AlphaTrackLcd.h  LiveFaderScale.h  LiveRemoteBridge.cpp  LiveRemoteBridge.h  LiveSetModel.cpp  LiveSetModel.h  LiveSpectrumTap.cpp  LiveSpectrumTap.h  LiveTargetResolver.cpp  LiveTargetResolver.h  TouchLiveClient.cpp  TouchLiveClient.h  TouchLiveSettings.cpp  TouchLiveSettings.h
Source/UI/: AudioSettingsComponent.cpp  AudioSettingsComponent.h  CaptureAllButton.cpp  CapturePanel.cpp  CapturePanel.h  CaptureSettingsComponent.cpp  CaptureToast.cpp  CcControlLayer.cpp  CcControlLayer.h  CcPanel.cpp  CcPanel.h  ChannelAttributePanel.cpp  ChannelAttributePanel.h  ChordMemoryStrip.cpp  ChordMemoryStrip.h  ConduitColorPicker.cpp  ConduitColorPicker.h  ConduitTargetPicker.cpp  ConduitTargetPicker.h  CurveEditor.cpp  CurveEditor.h  CurvedSlider.h  DevPanel.cpp  DevPanel.h  DragCursorHider.h  EditorDockPanel.cpp  EditorDockPanel.h  ExpressionRibbon.cpp  ExpressionRibbon.h  FxModulePanel.cpp  FxModulePanel.h  GainFaderMeter.cpp  GainFaderMeter.h  GridKeyboardComponent.cpp  GridKeyboardComponent.h  GridPage.cpp  GridPage.h  GridSettingsView.cpp  GridSettingsView.h  HardwareTargetPicker.cpp  (+83 more)
Source/Util/: RtAllocationGuard.cpp  RtAllocationGuard.h  ScaleQuantizer.h
Tests/Core/: AirwindowsModuleTests.cpp  AudioDeviceControllerTests.cpp  AudioEndpointTests.cpp  BarSampleAnchorsTests.cpp  CallbackTimingMonitorTests.cpp  CanvasViewportTests.cpp  CaptureBufferTests.cpp  CaptureGateTests.cpp  CaptureMeterTests.cpp  CaptureStressTests.cpp  CaptureTapTests.cpp  CcControlModelTests.cpp  ChannelNamesTests.cpp  ChannelStripLayersTests.cpp  ChordMemoryTests.cpp  ClockTests.cpp  ControllerProfileTests.cpp  CurveEditInteractionTests.cpp  EngineIOChannelTests.cpp  ExpressionAxisTests.cpp  FakeMidiTarget.h  FakeVoiceSink.h  GraphFaderTests.cpp  GraphManagerTests.cpp  GridSessionStoreTests.cpp  GridVoiceEngineTests.cpp  InputLinkSendTests.cpp  LevelMeterTests.cpp  LinkAudioReceiveTests.cpp  LinkAudioSendTests.cpp  LinkReceiveStreamTests.cpp  LinkSendTapsTests.cpp  LooperBankTests.cpp  LooperBigOutModuleTests.cpp  LooperClipExporterTests.cpp  LooperDistanceTests.cpp  LooperEngineTests.cpp  LooperIoModuleTests.cpp  LooperMathTests.cpp  LooperPatchInModuleTests.cpp  (+35 more)
Tests/TouchLive/: AlphaTrackLcdTests.cpp  LiveFaderScaleTests.cpp  LiveRemoteBridgeTests.cpp  LiveSetModelTests.cpp  LiveSpectrumTapTests.cpp  TouchLiveClientTests.cpp
Tests/UI/: BrowserPanelTests.cpp  ConduitColorPickerTests.cpp  EditorDockPanelTests.cpp  FxModulePanelTests.cpp  GridKeyboardTests.cpp  LevelMeterBarTests.cpp  LinkAudioReceivePanelTests.cpp  LinkAudioSendPanelTests.cpp  LooperPageTests.cpp  LooperWaveformStripTests.cpp  NodeCanvasTests.cpp  PageHostTests.cpp  PushDesignTests.cpp  TouchKeyboardTests.cpp  TouchLivePageTests.cpp  TrackSelectorPanelTests.cpp  TransportBarTests.cpp
Tests/Util/: ScaleQuantizerTests.cpp
docs/: Build.md  Calibration.md  DataModel.md  FxChassis.md  Grid.md  LinkAudio.md  Looper.md  M4LAnnounce.md  MidiRig.md  OscSend.md  PatchEngine.md  TouchLive.md  Transport.md
docs/adr/: 001-spscqueue-und-repo-rename.md  002-grid-touch-controller-baukasten.md  README.md  (+12 more)
(+95 files in other folders)
